fixing scrollbar issues on chrome

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,26 +6,36 @@
   --mr-indicator-next-color: green;
   --mr-bg: black;
   --mr-webtoon-padding: 0%;
+  --mr-scrollbar-size: 8px;
+  --mr-scrollbar-bg-color: gray;
+  --mr-scrollbar-track-color: darkgray;
+  --mr-scrollbar-track-hover: #484747;
+}
+
+* {
+  box-sizing: border-box;
+  overflow: auto;
 }
 
 .container {
   display: grid;
   height: var(--mr-height);
   width: var(--mr-width);
-  background: var(--mr-bg)
+  background: var(--mr-bg);
+  overflow: auto;
 }
 
 .container:not(.webtoon) {
-  overflow-x: scroll;
   scroll-snap-type: x mandatory;
   grid-auto-flow: column;
-  grid-auto-columns: var(--mr-width);
+  /* helps prevent horizontal scrollbar on chrome*/
+  grid-auto-columns: 100%;
+  grid-auto-rows: 100%;
 }
 
 .container.vertical {
   scroll-snap-type: y mandatory;
   grid-auto-flow: row;
-  grid-auto-rows: var(--mr-height);
 }
 
 .page {
@@ -34,9 +44,8 @@
 
 .container:not(.webtoon) .page {
   scroll-snap-align: center;
-  width: var(--mr-width);
-  height: var(--mr-height);
-  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
   display: flex;
   /*
  There is a problem with scrolling when this is used, this can be resolved with
@@ -180,7 +189,36 @@ since fit-height is the default case we only need to handle the landscape case
   grid-column: 3
 }
 
-::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+@supports selector(::-webkit-scrollbar) {
+  .container.vertical .page {
+    width: calc(var(--mr-width) - var(--mr-scrollbar-size));
+  }
+}
+
+*::-webkit-scrollbar {
+  display: block;
+  width: var(--mr-scrollbar-size);
+  height: var(--mr-scrollbar-size);
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
+*::-webkit-scrollbar-track,
+*::-webkit-scrollbar-track-piece {
+  background-color: var(--mr-scrollbar-bg-color);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--mr-scrollbar-track-color);
+  border: 5px solid transparent;
+  border-radius: calc(1.5 * var(--mr-scrollbar-size));
+  box-shadow: 4px 0px 0px 4px #00000040 inset;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--mr-scrollbar-track-hover);
+  border: 0px solid transparent;
+  box-shadow: none;
 }
